# hobbytrader

./: .gitignore  LICENSE  README.md  app.py  ducky.py  m1.py  pyproject.toml  test.csv
.github/workflows/: nasdaq.yml  nasdaq_bm.yml  nasdaq_cc.yml  nasdaq_cd.yml  nasdaq_cs.yml  nasdaq_en.yml  nasdaq_fs.yml  nasdaq_hc.yml  nasdaq_in.yml  nasdaq_ns.yml  nasdaq_re.yml  nasdaq_te.yml  nasdaq_ut.yml  sp500.yml  time.yml  tsx.yml
DATASET/: SP500-2023-02-23.parquet  SP500-2023-02-25.parquet  TSX-2023-02-23.parquet  TSX-2023-02-26.parquet  TSX-2023-02-27.parquet
DATASET/CSV/: NASDAQ-BM0-2023-03-04.csv  NASDAQ-BM0-2023-03-06.csv  NASDAQ-BM0-2023-03-07.csv  NASDAQ-BM0-2023-03-08.csv  NASDAQ-BM0-2023-03-09.csv  NASDAQ-BM0-2023-03-10.csv  NASDAQ-BM0-2023-03-12.csv  NASDAQ-BM0-2023-03-13.csv  NASDAQ-BM0-2023-03-14.csv  NASDAQ-BM0-2023-03-15.csv  NASDAQ-BM0-2023-03-16.csv  NASDAQ-BM0-2023-03-17.csv  NASDAQ-BM0-2023-03-18.csv  NASDAQ-BM0-2023-03-19.csv  NASDAQ-BM0-2023-03-20.csv  NASDAQ-BM0-2023-03-21.csv  NASDAQ-BM0-2023-03-22.csv  NASDAQ-BM0-2023-03-23.csv  NASDAQ-BM0-2023-03-24.csv  NASDAQ-BM0-2023-03-25.csv  NASDAQ-CD0-2023-03-05.csv  (+155 more)
examples/: build_db.py  build_mysql.py  build_questdb.py  dashboard.py  msft-chart.py  read_from_db.py  splitbysymbol.py  symbols_github.py  symbols_sp500.py  timeframes.py  trade_simulation.py
experiments/: api_upload.py  filesingitrepo.py  floatstock.py  m0.py  m2.py  m3.py  m4.py  panel01.py  plot_candles.py  plot_peaks.py  plot_slider.py  plot_subplot.py  test_ariane.py
hobbytrader/: FMPAD.py  __init__.py  candlegraph.py  database.py  download.py  github.py  pyqt6-icons.py  scrapper.py  scrappers.py  strategy.py  symbols.py  trades.py  universe.py  universe2.py  universe3_tmp.py  view.py  yahoo.py
tests/: test_database.py  test_envvars.py  test_github.py  test_scrapper.py  test_scrappers.py  test_strategy.py  test_symbols.py  test_universe.py  test_universe2.py  test_view.py  test_yahoo.py
(+347 files in other folders)
