[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hobbytrader"]
namespaces = false

[project]
name = "hobbytrader"
version = "0.1.0"
authors = [
    {name = "Maple Frog Studio", email = "devops@maplefrogstudio.com"},
]
description = "Hobby trader is a python package for algorithmic trading ans backtesting"
requires-python = ">=3.10"
dependencies = [
    "yfinance",
    "pyarrow",
    "pandas",
    "black",
    "jupyter",
]

[project.scripts]
sp500 = "hobbytrader.download:sp500"
tsx = "hobbytrader.download:tsx"